[package]
name = "SharedHoster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.4.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.107"
rlua = { version = "0.19.7", features = ["builtin-lua54"]}
reqwest = { version = "0.11.22", features = ["json", "blocking"] }